increase memory used for parquet in-memory pages