@@ -108,13 +108,17 @@ task commandApiServerCode(type: org.openapitools.generator.gradle.plugin.tasks.G
                      useBeanValidation   : "false",
                      interfaceOnly       : "true",
                      serializableModel   : "true",
-                     useTags             : "true",
-                     responseWrapper     : "CompletableFuture"]
+                     useTags             : "true"]
 }
 
 // code will be generated during compilation
 compileJava.dependsOn(commandApiServerCode)
 
+test {
+    minHeapSize = "2g" // initial heap size
+    maxHeapSize = "2g" // maximum heap size
+    jvmArgs '-XX:MaxPermSize=2g' // mem argument for the test JVM
+}
 
 // attach the generated folder as source for this project
 sourceSets {
